--- a/app/www/task_01.html
+++ b/app/www/task_01.html
@@ -44,12 +44,12 @@ Examine the results produced by using the different block designs (Make sure the
 Suppose the forest has an effect on tree production. Click on the block effect and run the completely randomized experiment design. How do the results when there is a forest effect compare to when there was no effect from the forest? Can you explain what effect the forest is having on tree production? (Hint: Use the explore observations slider to examine individual experiments. You may want to examine experiments with and without the block effect.)
 </li>
 <li> 
-A well designed experiment should account for the forrest effect and yield results that allow us to conclude that one variety of tree produces more fruit than the other. Recall the results from the experiments that did not have a block effect. Approximately how often does the completely randomized design detect the difference that was found in the experiments without a block effect?
-</li>
-<li> 
-Examine a horizontal block design and vertical block design. Which design produces better results? That is, which design is more likely to detect the difference in the two varieties?
+A well designed experiment should account for the forest effect and yield results that allow us to conclude that one variety of tree produces more fruit than the other. When the block effect was not present the results clearly indicated there was a positive difference in mean fruit production. Approximately how often does the completely randomized design detect a positive difference in the experiments with a block effect?
 </li>
 <li>
-Can you explain what is happening in each blocking design? Use the explore observations slider and describe what is happening in a horizontal block design and what is happening in a vertical block design? Which design is better if the forest is having an impact on the results?
+Examine a horizontal block design and vertical block design with the blocking effect on. Which design produces better results? That is, which design is more likely to detect the positive difference in the two varieties?
+</li>
+<li>
+Can you explain what is happening in each blocking design? Use the explore observations slider and describe what is happening in a horizontal block design and what is happening in a vertical block design? Which design is better if the forest is having an impact on the results and why?
 </li>
 </ol>
